# simcore

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/derivations/formulas/: week_1.md
math/: mat3.hpp  vec3.hpp
simcore/: .gitignore
simcore/tests/: CMakeLists.txt
tests/: CMakeCache.txt  test_sanity.cpp  test_vec3.cpp
